# architect-linter-pro

./: .architect-pre-commit.sh  .architect.ai.json.example  .clippy.toml  .gitignore  404.html  CHANGELOG.md  CHANGELOG_v6.md  CONFIG_ERRORS.md  CONFIG_ERRORS_ES.md  Cargo.toml  DOCUMENTATION.md  INSTALL.md  INSTALL_WINDOWS.md  LICENSE  LINKEDIN_POST_ES.md  NEXT_STEPS.md  PENDING_TASKS.md  README.md  README_ES.md  ROADMAP.md  ROADMAP_ES.md  architect.json  architect.json.example  cobertura.xml  docusaurus.config.js  index.html  install.sh  package-lock.json  package.json  pre-commit.example  report.json  rustfmt.toml  session_summary.md  setup.ps1  setup.sh  sidebars.js  sitemap.xml  test_diff.txt  test_output.txt  test_output_2.txt
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
.github/: BADGES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  architect-lint.yml  changelog.yml  ci.yml  deploy-docs.yml  pr-check.yml  release.yml  update-homebrew.yml  update-scoop.yml
assets/js/: 0078cf17.bc3df515.js  0a9c66d2.40fd683e.js  0dffb83e.acae1d93.js  393be207.43e9e517.js  5339fd86.1f70d8af.js  5a9ae043.207b9226.js  6508aaef.6b8cf6e1.js  7661071f.4bbca68c.js  78aa600e.0d6579c9.js  814f3328.365c1559.js  880e1f9a.a206a9d6.js  885f7962.2718c42b.js  8f73c03f.4110b8e7.js  9067da7c.f0d5a5f3.js  925b3f96.1e174d8e.js  9cfe88f2.ab8b9708.js  acecf23e.b34fb95d.js  b9404f45.ad4e7f5f.js  b95ea484.1eea3f00.js  c04d30a0.03ba0ffd.js  d4f6588e.ff7a6129.js  e273c56f.ab0cc81e.js  f4f34a3a.fdac5799.js  main.08be2d58.js  runtime~main.d6cdc1e1.js
benches/: parser_benchmarks.rs  parsing_bench.rs  performance_bench.rs
benches/baselines/: baseline-2026-02-25.txt
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
docs/: ARCHITECTURE.md  CONFIG_SCHEMA_VALIDATION_IMPLEMENTATION.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  ERROR_HANDLING_LOGGING_IMPLEMENTATION.md  FINAL_UPDATE_SUMMARY.md  FRAMEWORKS.md  GETTING_STARTED.md  GITHUB_ACTIONS.md  INSTALLATION.md  MIGRATION_v6.md  OPTIMIZATION_LOG.md  PERFORMANCE.md  PRE_COMMIT_SETUP.md  intro.md  performance.md  swc-migration-audit.md  testing-guide.md
docs/api-reference/: ai-config.md
docs/coverage/: .quick-reference.txt  COMPLETION_REPORT.md  INDEX.md  README.md  SUMMARY.md  typescript-parser-baseline.md  typescript-parser-cobertura.xml  typescript-parser-report.html
docs/getting-started/: basic-usage.md
docs/guides/: ai-features.md  daemon-mode.md  rule-engine.md  watch-mode.md
docs/installation/: windows.md
docs/intro/: index.html
docs/plans/: 2026-02-13-performance-optimization-design.md  2026-02-13-performance-optimization.md  2026-02-13-scoring-tests-design.md  2026-02-13-scoring-tests-implementation.md  2026-02-16-parser-tests-design.md  2026-02-16-typescript-parser-tests.md  2026-02-20-product-master-plan-design.md  2026-02-23-init-command-design.md  2026-02-23-init-command.md  2026-02-25-documentation-unification.md  2026-02-25-quality-performance-pro.md  2026-02-25-release-testing-dx.md  2026-02-25-scope-reduction.md  2026-03-03-maturity-implementation.md  2026-03-03-maturity-refactor-design.md
docs/roadmap/: index.html
docs/templates/: django.md  express.md  nestjs.md  nextjs.md
docs/troubleshooting/: common-issues.md  config-errors.md
es/: sitemap.xml
es/blog/: index.html
es/markdown-page/: index.html
examples/: architect-django.json  architect-express.json  architect-nestjs.json  architect-react.json
github-action/: Dockerfile  action.yml  entrypoint.sh  workflow-example.yml
gitlab-ci/: .gitlab-ci.yml  Dockerfile
homebrew/: architect-linter-pro.rb
npm/: .gitignore  .npmignore  install.js  package.json  run.js
plan/: 2026-02-11-brainstorm-session.md  2026-02-11-v4-enterprise-design.md
schemas/: architect.schema.json
scoop/: README.md  architect-linter-pro.json
scripts/: coverage.bat  coverage.sh  generate-changelog.js  install-hook.sh  memory_profile.sh  pre-push.sh
src/: ai.rs  analysis_result.rs  analyzer.rs  autofix.rs  cache.rs  circular.rs  cli.rs  config.rs  detector.rs  discovery.rs  features.rs  git.rs  git_changes.rs  lib.rs  license.rs  logging.rs  main.rs  memory_cache.rs  metrics.rs  notification.rs  report.rs  scoring.rs  source_span.rs  ui.rs  watch.rs
src/ai/: mod.rs  pattern_detection.rs  recommendations.rs  suggestions.rs
src/analyzer/: collector.rs  metrics.rs  mod.rs  pattern_matcher.rs  swc_parser.rs
src/config/: generator.rs  husky.rs  ignored_paths.rs  loader.rs  migration.rs  mod.rs  types.rs  wizard.rs
src/css/: custom.css
src/detection/: framework_detector.rs  mod.rs
src/init/: mod.rs  prompts.rs
src/output/: dashboard.rs  html.rs  mod.rs  rich.rs
src/parsers/: csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs  typescript_pure.rs
src/security/: cfg.rs  cfg_builder.rs  cfg_types.rs  data_flow.rs  mod.rs  vulnerabilities.rs
tests/: BUGS_FIXED.md  FINAL_TEST_RESULTS.md  FIXTURES_TEST_RESULTS.md  README.md  cfg_types.rs  test_ai_parsing.rs  test_analyzer.rs  test_cache.rs  test_cfg_builder.rs  test_circular.rs  test_circular_deps_integration.rs  test_cli.rs  test_cli_unit.rs  test_common.rs  test_config.rs  test_config_generator.rs  test_django_fixture.rs  test_e2e_github_action.rs  test_fixtures.rs  test_framework_enum.rs  test_git_changes.rs  test_html_report.rs  test_import_properties.rs  test_init.rs  test_init_templates.rs  test_integration.rs  test_license_management.rs  test_memory_cache.rs  test_memory_optimization.rs  test_method_length.rs  test_metrics.rs  test_multi_file_analysis.rs  test_nestjs_fixture.rs  test_parser_snapshots.rs  test_parsers.rs  test_pattern_detection.rs  test_property_based.rs  test_recommendations.rs  test_scoring.rs  test_scoring_integration.rs  (+9 more)
vscode/: .vscodeignore  package-lock.json  package.json
website/: docusaurus.config.ts  package-lock.json
(+355 files in other folders)
