[package]
name = "architect-linter-pro"
version = "4.1.0-beta"
edition = "2021"
authors = ["Sergio Guadarrama"]
description = "Multi-language architecture linter with dynamic rules engine (TypeScript, JavaScript, Python, Go, PHP, Java)"
license = "MIT"
repository = "https://github.com/sergiogswv/architect-linter"
keywords = ["linter", "architecture", "multi-language", "code-quality", "tree-sitter"]
categories = ["development-tools"]

[dependencies]
# serde - updated to fix security vulnerabilities in dependencies
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.101"

# Force time >=0.3.47 to fix RUSTSEC-2026-0009 (DoS vulnerability)
# This overrides the vulnerable 0.3.44 version from mac-notification-sys
time = "0.3.47"

# Usamos las versiones que no dan guerra con esa versión de serde
swc_common = { version = "0.33.0", features = ["concurrent"] }
swc_ecma_ast = "0.110.0"
swc_ecma_parser = "0.141.0"

walkdir = "2.5.0"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0"
rayon = "1.10"
dialoguer = "0.11.0"
indicatif = "0.18.0"

tokio = { version = "1.0", features = ["full"] } # Para manejar peticiones asíncronas
reqwest = { version = "0.11", features = ["json"] } # Cliente HTTP
async-trait = "0.1"
anyhow = "1.0"
console = "0.15"
notify = "6.1" # File system watcher for watch mode

# Tree-sitter for multi-language support
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-java = "0.21"
tree-sitter-php = "0.22"

# v4.0 additions
git2 = "0.20"
chrono = { version = "0.4", features = ["serde"] }

# Analysis caching
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lru = "0.13"

# OS integration (v4.1.0-beta)
notify-rust = "4.12"
# daemonize is unmaintained but needed for Unix daemon functionality
# Consider replacing with a maintained alternative in future releases
daemonize = "0.5"

[dev-dependencies]
# Testing framework
tempfile = "3.10"          # Temporary directories and files for tests
assert_cmd = "2.0"         # CLI testing utilities
predicates = "3.1"         # Assertions for assert_cmd
insta = "1.34"             # Snapshot testing
pretty_assertions = "1.4"  # Better assertion output

# Test utilities
serial_test = "3.0"        # Run tests serially when needed

# Benchmarking
criterion = "0.5"

[[bench]]
name = "performance_bench"
harness = false