[package]
name = "architect-linter-pro"
version = "5.0.2"
edition = "2021"
authors = ["Sergio Guadarrama"]
description = "Multi-language software architecture linter written in Rust"
license = "MIT"
repository = "https://github.com/sergiogswv/architect-linter-pro"
documentation = "https://docs.rs/architect-linter-pro"
keywords = ["architecture", "linter", "rust", "devops"]
categories = ["development-tools"]
readme = "README.md"

[features]
default = ["community"]
community = []
pro = ["security-audit"]
security-audit = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.101"

walkdir = "2.5.0"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0"
rayon = "1.10"
dialoguer = "0.11.0"
indicatif = "0.18.0"

tokio = { version = "1.0", features = ["full"] } # Para manejar peticiones asíncronas
reqwest = { version = "0.11", features = ["json"] } # Cliente HTTP
async-trait = "0.1"
anyhow = "1.0"
console = "0.15"
notify = "6.1" # File system watcher for watch mode

# Structured logging (v4.3.0)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
# Configuration validation (v4.3.0)
jsonschema = "0.17"

# Tree-sitter for multi-language support
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-php = "0.24"

# v4.0 additions
git2 = "0.20"
chrono = { version = "0.4", features = ["serde"] }

# Analysis caching
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lru = "0.13"

# OS integration (v4.1.0-beta)
notify-rust = "4.12"
md5 = "0.8.0"

# Directory utilities for license management
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
# daemonize is unmaintained but needed for Unix daemon functionality
# Consider replacing with a maintained alternative in future releases
daemonize = "0.5"

[dev-dependencies]
# Testing framework
tempfile = "3.10"          # Temporary directories and files for tests
assert_cmd = "2.0"         # CLI testing utilities
predicates = "3.1"         # Assertions for assert_cmd
insta = "1.34"             # Snapshot testing
pretty_assertions = "1.4"  # Better assertion output

# Test utilities
serial_test = "3.0"        # Run tests serially when needed

# Benchmarking
criterion = "0.5"

# Coverage reporting
cargo-tarpaulin = "0.31.0"

# Property-based testing
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "performance_bench"
harness = false

[[bench]]
name = "parsing_bench"
harness = false

[[bench]]
name = "parser_benchmarks"
harness = false
